Fixes wrapped button label

--- a/src/_dropdowns.scss
+++ b/src/_dropdowns.scss
@@ -32,6 +32,7 @@
 	padding: 10px 40px;
 	text-decoration: none;
 	width: 100%;
+	white-space: nowrap;
 
 	&:hover,
 	&:focus {
